[package]
name = "gooddeeds"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0.42"
daemonizr = "^0.1.5"
env_logger = "0.11.5"
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.124"

[[bin]]
name = "gooddeedsd"

[[bin]]
name = "gooddeedsctl"
